<resources>
    <string name="app_name">Online Exam app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Online Exam app</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">Online Exams</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="web_client_id">501661202025-ksmlg3o4t647roa5r9p1p1v13pe0llbe.apps.googleusercontent.com</string>
    <string name="menu_logout">Logout</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in_with_email">Log in with Email</string>
    <string name="register">Register</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="app_icon">App Icon</string>
    <string name="question_mark_icon">Question mark icon</string>
    <string name="general_knowledge_quiz">General knowledge quiz</string>
    <string name="online">Online</string>
    <string name="start">Start</string>
    <string name="climb_the_summit_of_success">Climb the Summit of Success!</string>
    <string name="quiz_icon">Quiz icon</string>
</resources>